--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buck U Adventure</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>aldi</h1>
+    <header>
+        <img class="logo" src="img/buck.png" alt="buckU">
+        <nav>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Destinations</a></li>
+                <li><a href="#">Galleries</a></li>
+                <li><a href="#">Our Community</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <img class="background" src="img/hiking.jpg" alt="hiking">
+            <div class="title-content">Life is an Adventure!</div>
+            <div class="content">Explore everything you've never seen and find happiness in your journey.<br> Buck U will always guide and assist you on your journey.<br> Come on and join Buck U!</div>
+            <span class="btn message"> Explore!</span>
+        </div>
+    </main>
 </body>
+
 </html>
