--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img class="background" src="img/hiking.jpg" alt="hiking">
             <div class="title-content">Life is an Adventure!</div>
             <div class="content">Explore everything you've never seen and find happiness in your journey.<br> Buck U will always guide and assist you on your journey.<br> Come on and join Buck U!</div>
-            <span class="btn message"> Explore!</span>
+            <a href="#" class="btn-message">Go Explore!</a>
         </div>
     </main>
 </body>
